<resources>
    <string name="app_name">CallumGedlingA2</string>
    <string name="settings">Settings</string>
    <string name="landing_page">Landing Page</string>
    <string name="play_button">Play Button</string>
    <string name="high_scores_button">High scores button</string>
    <string name="chemistry_photo">Chemistry photo</string>
    <string name="title_activity_high_score">HighScoreActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="chemistry_question">Chemistry Question</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">HARD</string>
    <string name="play">Play!</string>
    <string name="add_name">Enter Your Name To Join the High Scores List!</string>
    <string name="go">GO</string>
    <string name="tweet">Tweet Your score!</string>
    <string name="chemistry_quiz">Chemistry Quiz</string>
    <string name="home">Home</string>
    <string name="instructions">You have one minute to answer as many questions correctly as you can. Easy mode has four questions, medium has 8 and hard has 10, good luck! If you score above 80% expect a special surprise on the final screen :)</string>
    <string name="instructions_settings">Instructions/Settings</string>
    <string name="user_score">You scored: , %1$s!</string>


    <string-array name="difficulty">
        <item>@string/easy</item>
        <item>@string/medium</item>
        <item>@string/hard</item>
    </string-array>
</resources>