<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chemistry_quiz"
                android:textSize="48sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_name"
                android:autofillHints="1"
                android:gravity="center"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="LabelFor"
                android:onClick="nameSelected"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageButton
                android:id="@+id/play_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_play_arrow_black_48"
                android:contentDescription="@string/play_button"
                android:onClick="playClicked"/>



        </TableRow>
        <Space
            android:layout_height="50sp"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageButton
                android:id="@+id/settings_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_settings_black_48"
                android:contentDescription="@string/settings"
                android:onClick="settingsClicked"/>
        </TableRow>

        <Space
            android:layout_height="50sp"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageButton
                android:id="@+id/high_scores_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_article_black_48"
                android:contentDescription="@string/high_scores_button"
                android:onClick="highScoreClicked"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
            android:id="@+id/chemistry_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/chemistry_photo">

        </ImageView>

        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>